--- a/index.html
+++ b/index.html
@@ -1,44 +1,54 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <title>Yasushi's Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Resume</title>
 </head>
-
 <body>
-    <h1>Yasushi Kurosawa's Portofolio</h1>
-    <h2>I'm a Web Developer</h2>
+    <h1>Yasushi Kurosawa</h1>
+    <img src="./image/20150218_231251.jpg" alt="Prfile Photo" height="100" width="200">
+    
+    <p>
+        Objective: To obtain a position in an organization where I can emphasize my strenghts, <br>
+        persistence, and dedicaiton for a challenging position, in which it will utilize my acquired skills <br>
+        with an ionnerdrive to succeed and to accomplish the goals of the organization <br>
+    </p>
 
-    <hr>
+    <h2>Education:</h2>
+    <h3>Southern new hampshire University | Online | 2024-Present</h3>
+    <p>Bacheor of Science Degree with a major in Computer Science</p>
+        <ul>
+            <li>GPA 3.6</li>
+        </ul>
+    <h3>University of Washington | Seattle, WA | 2000-2004</h3>
+    <p> Bachelor of Arts degree with a major in Economics, 2004</p>
+        <ul>
+            <li>GPA 3.4</li>
+        </ul>
 
-    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-    <h3>The Best Movies Accordinhg to Yasushi</h3>
-    <img src="./assets/images/Movie-Ranking.png" alt="Yasushi's Top 3 Movie Ranking" height="200" width="200">
+    <h2>Certification:</h2>
+    <h3>University of Michigan | Online: Coursera.org</h3>
+    <p>09/2016-03/2017 Computer Science (Web Development and Coding)</p>
 
-    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-    <img src="./assets/images/Birthday-Invite.png" alt="Birthday Invite Projecct" height="200" width="200">
-
-    <hr>
-
-    <a href="./public/contact.html">Contact Me</a>
-    <a href="./public/about.html">About Me</a>
+    <h2>Personal Work Experience</h2>
+    <h3>Laufer Group International</h3>
+    <p>11/2022-Present:  Ocean Export Traffic Representative</p>
+        <ul>
+            <li>Make an ocean booking request with various carriers to countries such as Japan, China, Vietnam, Philippines, Australia, Venezuela, Puerto Rico, Guatemala, Pakistan, Europe, etc.</li>
+            <li>Familiar with creating Phyto</li>
+            <li>Familiar with Cargowise software</li>
+            <li>Affluent with AES filing</li>
+            <li>Rate negotiation with carriers</li>
+            <li>Trucking coordination (Transloading at partners’ warehouse)</li>
+            <li>Submit the shipping instruction</li>
+            <li>Billing (Meeting KPI)</li>
+        </ul>
+    <h2>Other:</h2>
+    <ul>
+        <li><a href="./public/contact me.html">Contact Me</a></li>
+        <li><a href="./public/hobbies.html">Hobbies</a></li>
+    </ul>
+    <footer>@Yasushi Kurosawa.  All rights reserved.</footer>
 </body>
-
 </html>
